# uplus-revai

./: .env.example  .gitignore  .prettierrc.json  README.md  package-lock.json  package.json  prisma.config.ts  seed.ts  test-prisma.ts  test-resumen.md  tsconfig.json  vitest.config.ts
app-ai-service/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  env.example  pyproject.toml
app-ai-service/src/: main.py
app-ai-service/src/api/routes/: analysis.py  health.py
app-ai-service/src/app_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app-ai-service/src/core/: config.py
app-ai-service/src/schemas/: analysis.py
app-ai-service/src/services/: analysis_service.py  report_client.py  review_client.py  survey_client.py
app-ai-service/src/services/llm/: __init__.py  base.py  factory.py  mock.py
app-analysis-service/: .prettierrc.json  AGENTS.md  README.md  package-lock.json  package.json  vercel.json
app-auth/: AGENTS.md  README.md  env.example  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
app-frontend/: .env.example  AGENTS.md  next.config.ts  package-lock.json  package.json  test.txt  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts  vitest.setup.tsx
app-report-service/: AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  vercel.json
app-review-service/: AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
app-surveys-service/: AGENTS.md  README.md  next.config.ts  (+5 more)
(+334 files in other folders)
